--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -23,11 +23,44 @@
 .home-content__right__topview__list i {
   font-size: 12px; }
 
+.manage__btn--green {
+  background: #3c763d; }
 .manage__title {
   background: #3c763d; }
 .manage ul li {
   padding: 10px 15px;
   font-size: 14px;
   color: #3c763d; }
+.manage__article-info ul li {
+  font-size: 16px;
+  list-style-type: square;
+  padding: 7px 8px; }
+.manage__article-manage ul li {
+  font-size: 16px; }
+
+.admin__button--outline-none:focus {
+  outline: none !important;
+  box-shadow: none; }
+.admin--bg-green {
+  background: #3c763d; }
+.admin__menu-left {
+  height: 75vh; }
+  .admin__menu-left--bg-dark {
+    background: #2A3F54; }
+  .admin__menu-left--bg-darklight {
+    background: #374A5E; }
+  .admin__menu-left button {
+    font-size: 15px; }
+.admin__header__search i {
+  color: green; }
+.admin__header__notify i {
+  padding: 7px;
+  font-size: 19px; }
+.admin__header__notify span {
+  padding: 1px;
+  font-size: 11px;
+  position: relative;
+  bottom: 12px;
+  right: 16px; }
 
 /*# sourceMappingURL=style.css.map */
