--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -122,6 +122,7 @@ $box-color: #29475B;
       }
     }
     &__notify{
+      max-width: 53px;
       i{
         padding: 7px;
         font-size: 19px;
