--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -17,7 +17,7 @@
   border-bottom: 1px double #81ffdf; }
 .home-content__right__topview__list--bgyellow {
   background: #fff601; }
-.home-content__right__topview__list a {
+.home-content__right__topview__list button {
   font-size: 11px;
   line-height: 12px; }
 .home-content__right__topview__list i {
@@ -28,9 +28,10 @@
 .manage__title {
   background: #3c763d; }
 .manage ul li {
-  padding: 10px 15px;
-  font-size: 14px;
-  color: #3c763d; }
+  padding: 10px 15px; }
+  .manage ul li button {
+    font-size: 16px;
+    color: #3c763d; }
 .manage__article-info ul li {
   font-size: 16px;
   list-style-type: square;
