--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,5 +64,11 @@
     position: relative;
     bottom: 12px;
     right: 16px; }
-
+body {
+  background-image: url('img/bg.png');
+  background-position: left top;
+  background-size: auto;
+  background-repeat: repeat;
+  background-attachment: fixed;
+}
 /*# sourceMappingURL=style.css.map */
